--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ padding: 0px;
 /* Sharred style */
 
 .button{
+
+   
     color: white;
     font-weight: 600;
   margin: 10px;
@@ -69,6 +71,7 @@ background: var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(2
 
 .button:hover{
    transform: translateY(-3px);
+   cursor: pointer;
  
   box-shadow: 
     0 0 10px rgba(251, 9, 180, 0.7), 
@@ -79,7 +82,7 @@ background: var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(2
 .hero{
    background-image: url(./assets/hero-bg.png);
    background-repeat: no-repeat;
-   background-attachment: fixed;
+   
    background-size: cover;
    width: 100%;
    height: 760px;
@@ -93,7 +96,7 @@ justify-content: center;
 align-items: center;
 
 }
-img , .new{
+.hero-image , .new{
   position: absolute;
   left: center;
   top: center;
@@ -106,13 +109,13 @@ img , .new{
 
 @keyframes spin {
 0% {
-    transform: scale(1); /* স্বাভাবিক সাইজ */
+    transform: scale(1);
   }
   50% {
-    transform: scale(1.15); /* ১৫% বড় হবে */
+    transform: scale(1.15); 
   }
   100% {
-    transform: scale(1); /* আবার আগের সাইজে ফিরবে */
+    transform: scale(1); 
   }
 }
 
@@ -127,3 +130,41 @@ img , .new{
    animation: spin 2s ease-in-out infinite;
    
 }
+
+.txt{
+   color: white;
+   display: flex;
+   flex-direction: column;
+  
+}
+.txt , h1  p {
+   align-items:center;
+  
+   margin-top: 550px;
+}
+h1{
+   font-size: 60px;
+
+}
+.txt , p{
+   font-size: 18px;
+   font-weight: 200;
+   padding-top: 10px;
+   padding-bottom: 10px;
+}
+
+.msg{
+   padding: 13px;
+   border-radius: 20px;
+   background-color: transparent;
+   color: #00FF88;
+   border: 1px solid #00FF88;
+   
+}
+.msg:hover{
+   cursor: pointer;
+}
+/* #B01{
+   display: flex;
+   gap: 8px;
+} */
