Video Section Done

--- a/style.css
+++ b/style.css
@@ -273,5 +273,47 @@ grid-column: span 2;
    grid-row: span 1;
 }
 
+/* Section Videos  */
 
 
+.videos {
+   background-color: #1A0B2E;
+   color: white;
+}
+.videos h2 {
+   text-align: center;
+   padding-top: 52px;
+   font-size: 48px;
+   padding-bottom: 50px;
+}
+
+.video-container{
+   display: flex;
+   justify-content: space-evenly;
+   justify-items: center;
+   gap: 60px;
+   padding: 0 200px;
+}
+
+iframe{
+   width: 400px;
+   height: 200px;
+   align-items: center;
+   padding: 25px 15px;
+   
+   
+}
+
+ .video{
+   /* border: 1px solid white ; */
+   border-radius: 20px;
+   background-color: #351165;
+   padding-left: 25px;
+ }
+ .video h5{
+   font-size: 24PX;
+
+ }
+ .video p{
+   font-size: 15px;
+ }
