--- a/style.css
+++ b/style.css
@@ -377,3 +377,48 @@ justify-items: center;
 
 
 }
+
+
+.footer{
+   background-image: url(./assets/footer-bg.png);
+   background-repeat: no-repeat;
+   background-size: cover;
+
+}
+
+.footer h2{
+   padding-top: 150px;
+   font-size: 100px;
+   text-align: center;
+
+}
+.footer-social-links {
+   color: #FFFFFF;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  gap: 80px;
+  
+
+}
+.foot-link{
+   display: flex;
+justify-items: center;
+justify-content: space-between;
+padding-top: 25px;
+
+
+   gap:20px;
+}
+
+
+
+.copy{
+   padding-top: 40px;
+   padding-bottom: 100px;
+   color: #FFFFFF ;
+  text-align: center;
+font-size: 16px;
+font-weight: 150;
+}
