Nav Hero About Section responsive done

--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ background: var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(2
     0 0 40px rgba(247, 233, 63, 0.3);
 }
 
+
+               /* Hero Section */
+
 .hero{
    background-image: url(./assets/hero-bg.png);
    background-repeat: no-repeat;
@@ -87,7 +90,7 @@ background: var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(2
    background-size: cover;
    width: 100%;
    height: 760px;
-   margin-top: 0px;
+   
 
 }
 
@@ -102,7 +105,7 @@ align-items: center;
   left: center;
   top: center;
   z-index: +1;
-  margin-top:  550px;
+  margin-top:  650px;
   align-items: center;
 
 
@@ -126,8 +129,8 @@ align-items: center;
    background-color: #00FF88;
    border-radius: 20px;
    padding: 8px;
-   margin-top: 250px;
-   margin-left: 180px;
+   margin-top: 350px;
+   margin-left: 200px;
    animation: spin 2s ease-in-out infinite;
    
 }
@@ -170,7 +173,7 @@ h1{
    display: flex;
    gap: 8px;
 } */
-
+                     /* about sectiopn */
 
 .About{
    text-align: center;
@@ -422,3 +425,105 @@ padding-top: 25px;
 font-size: 16px;
 font-weight: 150;
 }
+
+
+
+
+
+@media screen and (max-width:576px) {
+ *{
+   overflow-x: hidden;
+ }
+
+   .header{
+   
+     background-image: url(./assets/hamburger-menu.png);
+     background-repeat: no-repeat;
+   background-position-x:98%;
+   background-position-y: 25px;
+ 
+
+   }
+   .header ,.logo {
+   justify-content: flex-start;
+   padding: 10px 20px;
+   }
+
+   
+   .nav-menu a{
+      display: none;
+   }
+
+   .header  .button{
+      display: none;
+   }
+
+   /* Hero section */
+
+ .hero{
+   background-image: url(./assets/hero-bg.png);
+   background-repeat:no-repeat ;
+   width: auto;
+   height: auto;
+}
+
+            /* txt  */
+
+            .txt p{
+               
+               text-align: center;
+               
+
+            }
+
+   .button{
+      padding:10px 30px;
+   }         
+.msg{
+   padding: 12px 30px;
+
+}
+
+                              /* about section  */
+
+.About  p {
+   font-size: 13px;
+   font-weight: 200;
+   padding: 15px 10px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
