--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ hr{
 
 }
 
-/* Section */
+                  /* grid Section */
 
 .grids{
    background-color: #230E3D;
@@ -235,6 +235,7 @@ hr{
       background-color: #351165;
       border-radius: 25px;
       padding: 30px;
+      
 
 }
 .grid h5 {
@@ -279,7 +280,7 @@ grid-column: span 2;
 
 }
 
-/* Section Videos  */
+                   /* Section Videos  */
 
 
 .videos {
@@ -335,10 +336,15 @@ iframe{
 
  .host-container{
    background-color: #1A0B2E;
-   display: flex;
-   
+   padding: 150px;
    
 
+ }
+ .host-container h1{
+   color: #FFFFFF;
+   text-align: center;
+   font-size: 40px;
+   margin-bottom: 50px;
  }
  .host{
 
@@ -346,7 +352,7 @@ iframe{
 background-color: #230E3D;
 border-radius: 50px;
 padding: 50px;
-margin: 100px 250px;
+margin: 0px 250px;
 display: flex;
 gap: 20px;
 justify-content: center;
@@ -489,8 +495,107 @@ font-weight: 150;
 .About  p {
    font-size: 13px;
    font-weight: 200;
-   padding: 15px 10px;
+   padding: 10px 8px;
 
+}
+.About  h1 {
+   font-size: 40px;
+   text-align: center;
+   
+   
+
+}
+.grids h2 {
+   font-size: 24px;
+}
+.grid{
+   overflow-x: hidden;
+   overflow-y: hidden;
+   display: grid;
+   grid-template-columns: repeat(1,1fr);
+   grid-template-rows: repeat(1,1fr);
+}
+.Global , .Mobile , .location , .Interview , .Rich  
+{
+      width: auto;
+      height: auto;
+      margin: auto;
+      
+      padding-bottom: 50px;
+
+      
+
+}
+                  /* featured episods */
+ 
+   .video-container{
+   display: flex;
+   justify-content: center;
+   justify-items: center;
+   flex-wrap: wrap;
+   margin: 0;
+   padding: 5px;
+}
+
+/* iframe{ */
+   /* width: 450px; */
+   /* height: 300px; */
+   /* align-items: center; */
+   /* padding-left: 10px; */
+   /* padding: 25px 15px; */
+   
+   
+/* } */
+
+ .host-container{
+  
+   display: flex;
+   flex-wrap: wrap;
+   margin: 0px;
+   padding: 0;
+}
+.host-container h1{
+   text-align: center;
+   font-size: 30px;
+   padding-left: 150px;
+   margin-top: 25px;
+}
+
+.host{
+
+/* border: 2px solid white; */
+
+/* border-radius: 50px; */
+
+display: flex;
+flex-wrap: wrap;
+padding-left: px;
+margin:5px ;
+text-align: center;
+}
+.social-links{
+   align-items: center;
+   justify-content: center;
+}
+
+.footer h2{
+   font-size: 60px;
+   
+}
+.foot-link{
+   display:grid;
+   grid-template-columns: repeat(4,1fr) ;
+   grid-template-rows: repeat(2,1fr);
+   
+   row-gap: 20px;
+   column-gap: px;
+
+}
+.points{
+
+   display: grid;
+   grid-template-columns: repeat(2,1fr);
+   grid-template-rows: repeat(2,1fr);
 }
 
 
@@ -503,27 +608,4 @@ font-weight: 150;
 
 
 
-
-
-
-
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
