--- a/style.css
+++ b/style.css
@@ -537,27 +537,26 @@ font-weight: 150;
    padding: 5px;
 }
 
-/* iframe{ */
-   /* width: 450px; */
-   /* height: 300px; */
-   /* align-items: center; */
-   /* padding-left: 10px; */
-   /* padding: 25px 15px; */
+iframe{
+   width: 390px;
+   height: 300px;
+   padding: 25px 15px;
    
    
-/* } */
+}
 
  .host-container{
   
    display: flex;
    flex-wrap: wrap;
+   justify-content: center;
    margin: 0px;
    padding: 0;
 }
 .host-container h1{
    text-align: center;
    font-size: 30px;
-   padding-left: 150px;
+   
    margin-top: 25px;
 }
 
